Added measure to prevent pawns from choosing to read a schematics book they already know.

--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Harmony\HarmonyPatches.cs" />
     <Compile Include="Harmony\Listing_TreeThingFilter_Visible.cs" />
     <Compile Include="Harmony\MainTabWindow_Inspect_GetLabel.cs" />
+    <Compile Include="Harmony\BookUtility_IsValidBook.cs" />
     <Compile Include="Harmony\ResearchManager_Patches.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Watcher.cs" />
     <Compile Include="Harmony\ResearchTree_ResearchPal\ResearchTree_Assets.cs" />
