--- a/Source/HumanResources.csproj
+++ b/Source/HumanResources.csproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.3.6.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Lib.Harmony.2.3.6\lib\net472\0Harmony.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="RimWorld">
       <HintPath>$(RimWorldPath)</HintPath>
